-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.2
-
None
-
-
cf8a8974e (13.0)
The following CMakePresets.json file:
{
"version": 2,
"configurePresets": [
{
"name": "msvc",
"generator": "Visual Studio 17 2022",
"architecture": "x64",
"binaryDir": "${sourceDir}/build/msvc",
"cacheVariables": {
"CMAKE_CONFIGURATION_TYPES": "Debug;Release"
}
}
],
"buildPresets": [
{ "name": "common",
"hidden": true
},
{ "name" : "msvc",
"inherits" : ["common"],
"configurePreset" : "msvc"
}
]
}
when used in QtCreator gives the following warning message:
error: Build preset common is missing a corresponding configure preset.
but cmake presets documentation states [1]
If a preset is hidden, it cannot be used in the --preset argument and does not have to have a valid configurePreset, even from inheritance. hidden presets are intended to be used as a base for other presets to inherit via the inherits field.
So I think the error message is incorrect.
[1]: https://cmake.org/cmake/help/latest/manual/cmake-presets.7.html#build-preset
| For Gerrit Dashboard: QTCREATORBUG-30373 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 543874,3 | CMakePM: Suppress error message for valid build preset | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |