CMakePM: Suppress error message for valid build preset

Fixes: QTCREATORBUG-30373
Change-Id: I2e2ec83c0b14d188096ace61468435ccbd36d84b
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>